--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="description" content="Join our community for our full library of tutorials and expert code reviews">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
@@ -18,7 +18,7 @@
 </head>
 <body>
   <main class="flex flex-row justify-center items-center bg-light-gray font-karla lg:h-screen">
-    <div class="flex flex-col lg:flex-row lg:flex-wrap shadow-lg max-w-xs lg:max-w-xl">
+    <div class="flex flex-col lg:flex-row lg:flex-wrap shadow-lg max-w-xs lg:max-w-[39rem]">
       <div class="flex flex-row lg:w-full">
         <section class="flex flex-col text-left bg-white p-6 lg:p-10 rounded-tl-lg rounded-tr-lg">
           <h1 class="text-custom-cyan text-lg lg:text-xl font-medium">Join our community</h1>
@@ -28,16 +28,16 @@
         </section>
       </div>
       <div class="flex flex-col lg:flex-row items-center w-full">
-        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-custom-cyan text-white p-6 lg:p-10 lg:rounded-bl-lg">
+        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-custom-cyan text-white p-6 lg:p-12 lg:rounded-bl-lg">
           <h2 class="text-md font-medium">Monthly Subscription</h2>
           <div class="flex flex-row items-center mt-2 lg:mt-3 mb-1">
             <span class="text-2xl font-bold">&dollar;29</span> 
             <span class="text-light-gray text-sm ml-3">per month</span>
           </div>
           <p class="text-sm mb-6 text-light-gray">Full access for less than &dollar;1 a day</p>
-          <button type="button" class="bg-bright-yellow text-sm px-3.5 py-2 rounded-md w-full shadow-lg">Sign Up</button>
+          <button type="button" class="bg-bright-yellow text-sm px-6 py-3 rounded-md w-full shadow-lg">Sign Up</button>
         </section>
-        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-darker-cyan text-white p-6 lg:p-10 rounded-bl-lg lg:rounded-bl-none rounded-br-lg">
+        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-darker-cyan text-white p-6 lg:p-12 rounded-bl-lg lg:rounded-bl-none rounded-br-lg">
           <h2 class="text-md font-medium">Why Us</h2>
           <div class="mt-4 text-xs text-light-gray">
             <p>Tutorials by industry experts</p>
@@ -54,8 +54,8 @@
   </main>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">slightlyfunctional</a>.
+      Challenge by <a class="font-bold" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a class="underline" href="#">alexl8819</a>.
     </p>
   </footer>
 </body>
