refactor: adds eslint and plugins for tailwindcss, fixes issues with class order and non-existent classes

--- a/src/index.html
+++ b/src/index.html
@@ -17,28 +17,28 @@
   </style>
 </head>
 <body>
-  <main class="flex flex-row justify-center items-center bg-light-gray font-karla lg:h-screen">
-    <div class="flex flex-col lg:flex-row lg:flex-wrap shadow-lg max-w-xs lg:max-w-[39rem]">
+  <main class="flex flex-row items-center justify-center bg-light-gray font-karla lg:h-screen">
+    <div class="flex max-w-xs flex-col shadow-lg lg:max-w-[39rem] lg:flex-row lg:flex-wrap">
       <div class="flex flex-row lg:w-full">
-        <section class="flex flex-col text-left bg-white p-6 lg:p-10 rounded-tl-lg rounded-tr-lg">
-          <h1 class="text-custom-cyan text-lg lg:text-xl font-medium">Join our community</h1>
-          <p class="text-bright-yellow mt-4 mb-2">30-day, hassle-free money back guarantee</p>
-          <p class="text-grayish-blue text-sm leading-6">Gain access to our full library of tutorials along with expert code reviews. 
+        <section class="flex flex-col rounded-t-lg bg-white p-6 text-left lg:p-10">
+          <h1 class="text-lg font-medium text-custom-cyan lg:text-xl">Join our community</h1>
+          <p class="mb-2 mt-4 text-bright-yellow">30-day, hassle-free money back guarantee</p>
+          <p class="text-sm leading-6 text-grayish-blue">Gain access to our full library of tutorials along with expert code reviews. 
           Perfect for any developers who are serious about honing their skills.</p>
         </section>
       </div>
-      <div class="flex flex-col lg:flex-row items-center w-full">
-        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-custom-cyan text-white p-6 lg:p-12 lg:rounded-bl-lg">
-          <h2 class="text-md font-medium">Monthly Subscription</h2>
-          <div class="flex flex-row items-center mt-2 lg:mt-3 mb-1">
+      <div class="flex w-full flex-col items-center lg:flex-row">
+        <section class="flex h-full w-full flex-col bg-custom-cyan p-6 text-left text-white lg:w-1/2 lg:rounded-bl-lg lg:p-12">
+          <h2 class="text-base font-medium">Monthly Subscription</h2>
+          <div class="mb-1 mt-2 flex flex-row items-center lg:mt-3">
             <span class="text-2xl font-bold">&dollar;29</span> 
-            <span class="text-light-gray text-sm ml-3">per month</span>
+            <span class="ml-3 text-sm text-light-gray">per month</span>
           </div>
-          <p class="text-sm mb-6 text-light-gray">Full access for less than &dollar;1 a day</p>
-          <button type="button" class="bg-bright-yellow text-sm px-6 py-3 rounded-md w-full shadow-lg">Sign Up</button>
+          <p class="mb-6 text-sm text-light-gray">Full access for less than &dollar;1 a day</p>
+          <button type="button" class="w-full rounded-md bg-bright-yellow px-6 py-3 text-sm shadow-lg">Sign Up</button>
         </section>
-        <section class="flex flex-col h-full w-full lg:w-1/2 text-left bg-darker-cyan text-white p-6 lg:p-12 rounded-bl-lg lg:rounded-bl-none rounded-br-lg">
-          <h2 class="text-md font-medium">Why Us</h2>
+        <section class="flex h-full w-full flex-col rounded-b-lg bg-darker-cyan p-6 text-left text-white lg:w-1/2 lg:rounded-bl-none lg:p-12">
+          <h2 class="text-base font-medium">Why Us</h2>
           <div class="mt-4 text-xs text-light-gray">
             <p>Tutorials by industry experts</p>
             <p>Peer &amp; expert code review</p>
